[gd_scene load_steps=9 format=2]

[ext_resource path="res://res/player/characters.png" type="Texture" id=1]
[ext_resource path="res://res/player/player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.64669, 10.7387 )

[sub_resource type="Animation" id=2]
resource_name = "blink"
length = 0.3
step = 0.025
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.02415, -0.025, 0, 0.025, 0, -0.0173974, -0.025, 0, 0.025, 0, 1.03925, -0.025, 0, 0.025, 0, 0.0127925, -0.025, 0, 0.025, 0, 1.02415, -0.025, 0, 0.025, 0 ),
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3 )
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=5]
length = 0.225
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 1 ]
}

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
modulate = Color( 1, 1, 1, 1.02415 )
position = Vector2( -0.787453, -0.787451 )
collision_layer = 6
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 23
frame = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.582306, 4.85807 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="effectsPlay" type="AnimationPlayer" parent="."]
anims/blink = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fall = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/shoot = SubResource( 5 )
anims/walk = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 1360
limit_bottom = 540
smoothing_enabled = true
smoothing_speed = 15.0
offset_h = -0.24

[node name="detecctor" type="RayCast2D" parent="."]
position = Vector2( 0, 6 )
enabled = true
cast_to = Vector2( 10, 0 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -3.3125
margin_top = -19.625
margin_right = 36.6875
margin_bottom = -5.625
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fireballspwanpoint" type="Position2D" parent="."]
position = Vector2( 10.2851, 5.8201 )

[node name="Timer" type="Timer" parent="."]

[node name="invincibility_timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="animation_changed" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="invincibility_timer" to="." method="_on_invincibility_timer_timeout"]
